--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -3,6 +3,15 @@ $primary-color: #ff99cc;
 $secondary-color: #9999ff; 
 $text-color: #333;
 
+// Typography
+$font-primary: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+$font-accent: 'Trebuchet MS', Arial, sans-serif;
+
+// Font sizes
+$font-size-base: 1.2rem;
+$font-size-large: 1.5rem;   
+$font-size-xlarge: 2rem;
+
 // Gradient background 
 $gradient-background: linear-gradient(to bottom, $primary-color 0%, $secondary-color 100%) no-repeat;
 
@@ -11,5 +20,4 @@ $background-pattern:
   linear-gradient(transparent 19px, rgba(255, 255, 255, 0.2) 1px), 
   linear-gradient(90deg, transparent 19px, rgba(255, 255, 255, 0.2) 1px);
   
-
 $background-size: 20px 20px; // Grid size
