--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -1,5 +1,6 @@
 @use "../abstracts/variables";
 
+
 body {
     background: 
         variables.$gradient-background, 
@@ -9,7 +10,7 @@ body {
         linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 1px, transparent 1px);
 
     background-size: 
-        100% 100vh,  
+        100% auto,  
         variables.$background-size,  
         variables.$background-size,  
         variables.$background-size;  
@@ -23,4 +24,6 @@ body {
     background-repeat: no-repeat, repeat, repeat, repeat; 
 
     background-blend-mode: overlay; 
+
+    min-height: 100vh;
 }
