Adding more basi styling for the website

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,4 +1,8 @@
 @use "abstracts/variables";
 @use "base/base";
 @use "base/typography";
+@use "base/layout";
 @use "layout/header";
+@use "components/images";
+@use "pages/index";
+@use "themes/themes";
