--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -27,4 +27,9 @@ $background-size: 20px 20px; // Grid size
 $menu-bg: darken($primary-color, 10%);  
 $menu-border: darken($primary-color, 20%); 
 $menu-text: $menu-text-color;
-$menu-hover: darken($secondary-color, 20%);
+$menu-hover: lighten($secondary-color, 10%);
+
+// Styling for main sections for the whole website 
+$content-bg: #ffffff;  
+$heading-bg: lighten($secondary-color, 5%);
+$border-radius: 20px;
