--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -13,27 +13,26 @@ nav {
         border: 2px solid variables.$menu-border;
         border-radius: 50px;
         background-color: variables.$menu-bg;
-
         li {
             margin: 0 15px;
+        }
 
-            a {
-                text-decoration: none;
-                font-family: variables.$font-primary;
-                font-size: variables.$font-size-large;
-                color: variables.$menu-text;
-                padding: 10px 15px;
-                display: inline-block;
+        a {
+            text-decoration: none;
+            font-family: variables.$font-primary;
+            font-size: variables.$font-size-large;
+            color: variables.$menu-text;
+            padding: 10px 15px;
+            display: inline-block;
 
-                &:hover {
-                    color: variables.$menu-hover;
-                }
-
-                &.active {
-                    font-weight: bold;
-                    text-decoration: underline;
-                }
+            &:hover {
+                color: variables.$menu-hover;
             }
+        }
+
+        .active {
+            font-weight: bold;
+            text-decoration: underline;
         }
     }
 }
