The buttons are placed in components/ which is a UI component

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,5 +5,6 @@
 @use "base/layout";
 @use "layout/header";
 @use "components/images";
+@use "components/buttons";
 @use "pages/index";
 @use "themes/themes";
